specification.ebnf
# Grammar specs using EBNF


(* ========================================================================== *)
(* LAYER 0: DEFINED CHARACTERS                                               *)
(* ========================================================================== *)

any_char = ? any ASCII character ? (* meant to be used only for comments! *)
digit  = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9";
letter = "a" | ... | "z" | "A" | ... | "Z";

newline = "\n" | "\r\n";
whitespace = " " | "\t" | "\r" | "\n";
semi = ";";
coma = ",";
underscore = "_";
line_comment = "//", {any_char - newline}, newline;
block_comment = "/*" , {any_char}, "*/";
comment = line_comment | block_comment;
ignored_tokens = whitespace | comment;
(* ========================================================================== *)
(* LAYER 1: TERMINALS & TOKENS                                                *)
(* ========================================================================== *)

(* Literals *)
integer_literal = digit, {digit};
boolean_literal = "true" | "false";
literal         = integer_literal | boolean_literal;
entry_point_literal = "main";
(* Types *)
type_keyword = "int" | "bool" | "void";

(* Keywords *)
if_keyword   = "if";
else_keyword = "else";
while_keyword = "while";
return_keyword = "return";

(* Assignment operator *)
assign_op = "=";
(* Unary operators *)
minus_sign_op = "-";
plus_sign_op = "+";
negation_op = "!";
(* Arithmetic operators *)
add_op               = "+";
minus_op            = "-";
divide_op           = "/";
multiply_op         = "*";
first_order_math_op  = divide_op | multiply_op;
second_order_math_op = add_op | minus_op;

(* Comparative operators *)
equal_op             = "==";
not_equal_op         = "!=";
greater_op           = ">";
smaller_op           = "<";
comparative_operator = equal_op | greater_op | smaller_op;

(* Boolean operators *)
and_op           = "&&";
or_op            = "||";
boolean_operator = and_op | or_op;

(* Grouping operators *)
open_scope  = "{";
close_scope = "}";
open_group  = "(";
close_group = ")";

(* Identifier *)
identifier = (letter| "_"), {letter | digit | "_"};

(* ========================================================================== *)
(* LAYER 2: EXPRESSIONS                                                       *)
(* ========================================================================== *)
grouped_expression     = open_group, expression, close_group;
primary_expression     = literal | identifier | function_call | grouped_expression;
unary_expression       = { minus_sign_op | plus_sign_op | negation_op }, primary_expression;
multiplying_expression = unary_expression, { first_order_math_op, unary_expression };
additive_expression    = multiplying_expression, { second_order_math_op, multiplying_expression };
relational_expression  = additive_expression, { (smaller_op | greater_op), additive_expression };
equality_expression    = relational_expression, { (equal_op | not_equal_op), relational_expression };
logic_and_expression   = equality_expression, { and_op, equality_expression };
logic_or_expression    = logic_and_expression, { or_op, logic_and_expression };
expression             = logic_or_expression;


(* ========================================================================== *)
(* LAYER 3: INSTRUCTIONS                                                      *)
(* ========================================================================== *)

primary_instruction  = expression, semi;
assign_instruction   = identifier, assign_op, expression, semi;
block_instruction    = open_scope, {instruction}, close_scope;
variable_declaration = type_keyword, identifier, [assign_op,expression], semi;
if_instruction       = if_keyword, open_group, expression, close_group, instruction, [else_keyword, instruction];
while_instruction    = while_keyword, open_group, expression, close_group, instruction;
return_instruction = return_keyword, [expression],semi;

instruction = if_instruction | primary_instruction | variable_declaration | block_instruction | while_instruction | return_instruction| assign_instruction;


(* ========================================================================== *)
(* LAYER 4: FUNCTIONS & PROGRAM                                               *)
(* ========================================================================== *)

(* functions *)
parameter = type_keyword, identifier;
param_list = open_group, [parameter, {",",parameter}],close_group;
argument = expression;
argument_list = open_group,[argument, {",",argument}],close_group;

function_declaration = type_keyword, identifier, param_list, semi;
function_definition = type_keyword, identifier, param_list, block_instruction;
function_call = identifier, argument_list;

(* Program *)
entrypoint = function_definition;
program = { function_definition | function_declaration | variable_declaration | entry_point};
